# collection-traits

./: Cargo.toml  README.md
src/: any.rs  base.rs  collect.rs  im_iters.rs  key_value.rs  lib.rs  map.rs  set.rs  some_mod.rs  value_cont.rs  vec.rs
src/any/: tests.rs
src/base/: tests.rs
src/collect/: into_iter.rs  try_from.rs
src/collect/try_from/: collect_array.rs  guard.rs  tests.rs  try_trait.rs
src/im_iters/: hash_set.rs  ord_map.rs  ord_set.rs
src/map/: map_mut.rs  map_ref.rs
src/set/: set_mut.rs  set_ref.rs
src/vec/: vec_mut.rs  vec_ref.rs
